# geometric-diffusion

./: .gitignore  README.md  run_optimisation.sh  test_file.txt
apptainer/: Container.def  requirements.txt  vfx_deps.sh
configs/: config.yaml
docker/: Dockerfile  docker-compose.yml  pyproject.toml  requirements.txt  vfx_deps.sh
src/: args_parser.py  bvp_algorithm.py  bvp_gradient.py  bvp_output.py  bvp_structs.py  geodesic.py  image_io.py  latents.py  main.py  offline_lpips.py  pipeline.py  scheduler.py  score.py  semantic.py  semantic_utils.py
src/bvp/: bvp_algorithm.py  bvp_gradient.py  bvp_output.py  bvp_structs.py
src/grad/: score.py
src/image/: image_io.py  scheduler.py
src/latent/: latents.py  pipeline.py  semantic.py
