[project]
name = "diffusion-optimizer"
version = "0.1.0"
requires-python = ">=3.11,<3.13"
description = "Diffusion model optimization toolkit"

dependencies = [
    # Core ML - Compatible with PyTorch 2.8.0
    "transformers>=4.46.0",
    "diffusers>=0.31.0",
    "tokenizers>=0.20.3",
    "sentencepiece>=0.2.0",
    "safetensors>=0.4.5",
    "huggingface-hub>=0.26.0",
    "accelerate>=1.2.0",
    "regex>=2024.11.6",
    
    # Scientific stack
    "numpy>=1.26.0,<3.0.0",
    "scipy>=1.14.0",
    "pandas>=2.2.0",
    "tqdm>=4.66.0",
    "psutil>=6.0.0",
    
    # Image/Vision
    "Pillow>=10.0.0",
    "einops>=0.8.0",
    "kornia>=0.7.4",
    "spandrel>=0.4.0",
    "av>=13.0.0",
    "lpips>=0.1.4",
    "torchsde>=0.2.6",
    "torchinfo>=1.8.0",
    
    # Audio
    "soundfile>=0.12.0",
    
    # Data handling
    "datasets>=3.2.0",
    "multiprocess>=0.70.16",
    "bitsandbytes>=0.45.0",
    
    # Infrastructure
    "aiohttp>=3.10.0",
    "yarl>=1.17.0",
    "pyyaml>=6.0.0",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.6.0",
    "SQLAlchemy>=2.0.36",
    "alembic>=1.14.0",
    
    # UI/CLI
    "gradio>=5.0.0",
    "typer>=0.15.0",
    "rich>=13.9.0",
    "comfy-cli>=1.5.0",
    "GitPython>=3.1.43",
    "PyGithub>=2.5.0",
    "jsonargparse>=4.35.0",
    "toml>=0.10.2",
    "chardet>=5.2.0",
]

[build-system]
requires = ["setuptools>=75.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
py-modules = []

[tool.uv]
# Let UV handle dependency resolution naturally
index-url = "https://pypi.org/simple"

# Override specific conflicting packages if needed
constraint-dependencies = [
    # Fix known conflicts
    "typing-extensions>=4.12.0",
    "urllib3>=2.0.0",  # Modern version for most packages
]

[tool.uv.sources]
# Specify git dependencies here if needed
# torchcubicspline = { git = "https://github.com/patrick-kidger/torchcubicspline.git" }
